# CE558_Team2

./: .gitmodules  CMakeLists.txt  README.md  bag_topic  et HEAD  package.xml  setup.py  src_arch
config/: UAV_control.yaml  control.yaml
doc/latex/: duck.aux  duck.bbl  duck.blg  duck.tex  references.bib  report.tex
include/: duck_pc_general.hpp
include/n_cpp/unavlib/: convt.h
include/unavlib/: convt.cpp  others.cpp  others.h
launch/: CE558.launch  control.launch  mesh2pcd.launch  n_octo.launch  n_path.launch  ncpp_LiDAR_bridge.launch  ncpp_LiDAR_simple.launch  ncpp_RGBD_bridge.launch  ncpp_RGBD_simple.launch  test.launch
models/A/: A.sdf  model.config
models/B/: B.sdf  model.config
models/C/: C.sdf  model.config
models/D/: D.sdf  model.config
models/DUCK/: DUCK.sdf  model.config
models/K/: K.sdf  model.config
models/N-CPP/: N-CPP.sdf  model.config
models/P/: P.sdf  model.config
models/U/: U.sdf  model.config
models/URL/: URL.sdf  model.config
models/text_description/: model.config  tmp.pcd
models/text_description/meshes/: A.stl  B.stl  C.stl  D U C K.stl  D.stl  K.stl  N-CPP.stl  P.stl  U.stl  URL.stl
msg/: point_node.msg  points_node.msg  points_nodes.msg
rviz/: bridge.rviz  bridge2.rviz  sensor.rviz  url.rviz
scripts/: UAV2map_pub_tf.py  mavros_UAV_dualshock.py  ncpp_dualshock.py  tf_broadcaster.py
src/: tester.cpp
src/control/: UAV_control.cpp  control.cpp
src/control/src/: control.cpp  control.hpp  ctrl_fncs.cpp  extras.cpp  sub_srv_fncs.cpp  subs_fncs.cpp
src/general/: duck_pc_general.cpp  duck_pc_general.hpp  general.h
src/graph/src/: graph.hpp
src/mapper/: mapper.cpp  octomap.cpp  tester.cpp  tester2.cpp  tester_octomap_pathgen.cpp
src/mapper/global_pc_registration/: global_pc_registration.cpp
src/mapper/octomap/: octoMapgen.cpp
src/mapper/prev/: mapper.cpp  mapper.hpp  octomap_gen.cpp
src/mapper/src/: global_pc_registration.h  new_octo_srvs.cpp  octo_general.cpp  octo_input.cpp  octo_srvs.cpp  octo_subs.cpp  octomap.hpp
src/mesh2pc/: mesh_sampling.cpp
src/nodeGen/: node_gen_main.cpp
src/nodeGen/src/: node_gen.cpp  node_gen.hpp
src/octomap/: global_local_octoMapgen.cpp  im_octoMapgen.cpp
src/octomap/src/: octoMapgen.h
src/path/: path_gen.cpp
src/path/prev/: octomap_convert.cpp  path.cpp  path.hpp  path_gen.cpp
src/path/src/: new_normal_extraction.cpp  normal_extraction.cpp  path_gen.hpp  path_srvs.cpp  path_subs.cpp  pc_general.cpp
src/pathgen/: path_tester.cpp  pathgen.cpp
src/pathgen/local_pc_registration/: local_pc_registration.cpp  local_pc_registration.hpp
src/pathgen/normal_path_sampler/: normal_path_sampler.cpp
src/pathgen/src/: octoMapgen.cpp
src/prev/control/src/: control.cpp
src/prev/mapper/: mapper.cpp
src/prev/mapper/global_pc_registration/: global_pc_registration.h
src/prev/pathgen/local_pc_registration/: local_pc_registration.hpp
srv/: EliminateTriple.srv  FindCollisionAvoidPath.srv  NextStep.srv  RayCast.srv  ThreeDAstar.srv  collision_check (사본).srv  collision_check.srv  get_octomap.srv  get_triple_points.srv  global_path.srv  go_get_it.srv  init_step.srv  mission_start.srv  mission_terminate.srv
srv/prev/: add_node.srv  local_path.srv
test/scripts/: UAV2map_pub_tf.py  mavros_UAV_dualshock.py
